# assam-rs

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: aws.rs  browser.rs  cli.rs  config.rs  constants.rs  lib.rs  main.rs  saml.rs
src/aws/: console.rs  credentials.rs  mod.rs  roles.rs  sts.rs
src/commands/: auth.rs  completion.rs  completions.rs  config.rs  configure.rs  mod.rs  web.rs
src/idp/: azure.rs  mod.rs
