[package]
name = "assam"
version = "0.0.1-alpha.2"
edition = "2024"
authors = ["Kanchi Shimono"]
description = "AWS SAML authentication CLI tool for Azure Entra ID"
repository = "https://github.com/KanchiShimono/assam-rs"
homepage = "https://github.com/KanchiShimono/assam-rs"
keywords = ["aws", "saml", "azure", "authentication", "cli"]
categories = ["command-line-utilities", "authentication"]
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
aws-config = { version = "1.8.3", features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "1.80.0", features = ["behavior-version-latest"] }
aws-smithy-types = "1.3.2"
base64 = "0.22.1"
chromiumoxide = { version = "0.7.0", default-features = false, features = ["tokio-runtime"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.42", features = ["derive"] }
clap_complete = "4.5.55"
dialoguer = "0.11.0"
dirs = "6.0.0"
flate2 = "1.1.2"
futures = "0.3.31"
quick-xml = { version = "0.38.0", features = ["serialize"] }
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls", "json"] }
rust-ini = "0.21.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
serial_test = "3.2.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
